# gitlab-cr-agent

./: .editorconfig  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  project-doc.md  pyproject.toml  requirements.txt
src/: __init__.py  exceptions.py  main.py
src/agents/: __init__.py  code_reviewer.py  providers.py
src/agents/tools/: __init__.py  analysis_tools.py  base.py  context_tools.py  language_detection.py  mcp_context7.py  registry.py  rule_engine.py  unified_context7_tools.py  validation_tools.py
src/agents/tools/python/: __init__.py  analysis_tools.py  code_parser.py  context_tools.py  validation_tools.py
src/api/: health.py  middleware.py  webhooks.py
src/config/: settings.py
src/models/: gitlab_models.py  review_models.py
src/services/: gitlab_service.py  review_service.py
src/utils/: __init__.py  circuit_breaker.py  secrets.py  version.py
tests/: README.md  conftest.py
tests/fixtures/: gitlab_responses.json  llm_responses.json  test_configs.yaml  webhook_headers.json  webhook_payloads.json
tests/integration/: test_api_integration.py  test_bearer_auth.py  test_circuit_breaker_integration.py  test_full_workflow.py  test_main.py  test_rate_limiting_integration.py  test_security_simple.py  test_service_integration.py  test_tool_workflow.py
tests/unit/: test_agents_code_reviewer.py  test_agents_providers.py  test_api_health.py  test_api_middleware.py  test_api_webhooks.py  test_config_settings.py  test_context_tools.py  test_exceptions.py  test_gitlab_service.py  test_health.py  test_main.py  test_main_app.py  test_middleware.py  test_middleware_comprehensive.py  test_middleware_simple.py  test_models.py  test_models_gitlab_models.py  test_models_review_models.py  test_providers.py  test_review_agent.py  test_review_service.py  test_rule_engine.py  test_services_gitlab_service.py  test_services_review_service.py  test_settings.py  test_standards_based_tools.py  test_tools_base.py  test_tools_mcp_context7.py  test_tools_registry.py  test_tools_unified_context7.py  test_utils_circuit_breaker.py  test_utils_secrets.py  test_version.py  test_webhooks.py
